corrected website pages - spacing issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url('https://cdn.pixabay.com/photo/2016/03/05/19/43/africa-1238491_1280.jpg') no-repeat center fixed;
+    background: url('https://cdn.pixabay.com/photo/2016/03/05/19/43/africa-1238491_1280.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
@@ -11,24 +11,6 @@ body {
 }
 
 /* from Bulma */
-
-#overlay {
-    opacity: 0.7;
-    background: #222;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    position: fixed;
-}
-
-#deliverybannernav {
-    background: rgb(187, 204, 33);
-    color: #222;
-    text-transform: uppercase;
-}
-
 .icon {
     align-items: center;
     display: inline-flex;
@@ -46,7 +28,7 @@ body {
 }
 
 .shop-now-button {
-    background: rgb(187, 204, 33);
+    background: rgb(187, 218, 13);
     color: #222;
     min-width: 260px;
 }
@@ -66,25 +48,36 @@ body {
     color: white;
 }
 
-.text-charcoal-grey {
-    color: #BBB !important;
-}
-
-.text-pale-grey {
-    color: #DDD !important;
+.text-black {
+    color: #222 !important;
 }
 
 .border-black {
     border: 1px solid black !important;
 }
 
+.bg-black {
+    background: #222 !important;
+}
+
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: black;
+    opacity: 0.65;
+	z-index: -1;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
-    .container {
-        max-width: 80%;
-    }
+  .container {
+    max-width: 80%;
+  }
 }
 
 /* fixed top navbar only on medium and up */
